--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,12 @@
 		</noscript>
 		<div id="app"></div>
 		<!-- built files will be auto injected -->
+		<script>
+			var b = 10;
+			(function b() {
+				b = 20;
+				console.log(b);
+			})();
+		</script>
 	</body>
 </html>
